Adjust search form input height to prevent text overflow

--- a/src/common/components/multiSelectDropdown/multiSelectDropdown.module.scss
+++ b/src/common/components/multiSelectDropdown/multiSelectDropdown.module.scss
@@ -46,7 +46,7 @@
     color: $hel-black;
 
     input {
-      height: 1.25rem;
+      height: 100%;
       line-height: 1.25rem;
       padding-left: 0;
       width: 100%;
