--- a/src/common/components/search/searchAutosuggest.module.scss
+++ b/src/common/components/search/searchAutosuggest.module.scss
@@ -26,7 +26,7 @@
     min-width: 50%;
 
     input {
-      height: 1.25rem;
+      height: 100%;
       line-height: 1.25rem;
       width: 100%;
       padding-left: 0;
